Implemented endpoint to send messages
